--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "ALPHA": 1e-6,
+  "alpha": 1e-6,
   "cond_label_size": 10,
   "hidden_size": 1452,
   "n_blocks": 4,
@@ -16,10 +16,10 @@
   "cond_base": false,
   "lr": 1e-4,
   "log_interval": 175,
-  "PARTICLE": "ALL",
-  "BASE_DIR": "/net/pr2/projects/plgrid/plggdaisnet",
-  "DATA_DIR_SUFFIX": "/data/alice",
-  "MODELS_DIR_SUFFIX": "/models/alice",
+  "particle": "all",
+  "base_dir": "/net/pr2/projects/plgrid/plggdaisnet",
+  "data_dir_suffix": "/data/alice",
+  "models_dir_suffix": "/models/alice",
   "dim": 44,
   "no_imgs_generated": 1,
   "bnn_ps": true,
